Backend implementation for #3322